[gd_scene load_steps=5 format=3 uid="uid://dnbgq63rhbp38"]

[ext_resource type="PackedScene" uid="uid://l7q3g1b102a7" path="res://example/player/player.tscn" id="1_plffl"]
[ext_resource type="Script" path="res://example/main.gd" id="1_qd6oa"]
[ext_resource type="Script" path="res://addons/health_hitbox_hurtbox/2d/hit_scan_2d/hit_scan_2d.gd" id="2_c8t1k"]

[sub_resource type="Theme" id="Theme_pjoij"]
Label/colors/font_color = Color(1, 0.654902, 0.109804, 1)
Label/font_sizes/font_size = 20

[node name="Main" type="Node"]
script = ExtResource("1_qd6oa")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="TogglesHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Damageable" type="CheckButton" parent="MarginContainer/VBoxContainer/TogglesHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Damageable"

[node name="Healable" type="CheckButton" parent="MarginContainer/VBoxContainer/TogglesHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Healable"

[node name="Killable" type="CheckButton" parent="MarginContainer/VBoxContainer/TogglesHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Killable"

[node name="Revivable" type="CheckButton" parent="MarginContainer/VBoxContainer/TogglesHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Revivable
"

[node name="LabelHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LabelHBoxContainer"]
layout_mode = 2
text = "HitScan"

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer/LabelHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_pjoij")
text = "Alive"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/LabelHBoxContainer"]
layout_mode = 2
text = "HitBox"

[node name="HitHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 45

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HeadHitScanAmount" type="SpinBox" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
alignment = 1

[node name="HeadHitScan" type="Button" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Head"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BodyHitScanAmount" type="SpinBox" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
alignment = 1

[node name="BodyHitScan" type="Button" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Body"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 45

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HeadHitBox" type="Button" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Head"

[node name="HeadHitBoxAmount" type="SpinBox" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="BodyHitBox" type="Button" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Body"

[node name="BodyHitBoxAmount" type="SpinBox" parent="MarginContainer/VBoxContainer/HitHBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
alignment = 1

[node name="LastAction" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="HealHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HealAmount" type="SpinBox" parent="MarginContainer/VBoxContainer/HealHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 10.0
alignment = 1

[node name="Heal" type="Button" parent="MarginContainer/VBoxContainer/HealHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Heal"

[node name="HeadTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="BodyTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HeadHitScan2D" type="RayCast2D" parent="."]
position = Vector2(-10, 140)
target_position = Vector2(350, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("2_c8t1k")
amount = 10

[node name="BodyHitScan2D" type="RayCast2D" parent="."]
position = Vector2(-10, 165)
target_position = Vector2(350, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("2_c8t1k")
amount = 10

[node name="HeadMarker2D" type="Marker2D" parent="."]
position = Vector2(573, 140)

[node name="BodyMarker2D" type="Marker2D" parent="."]
position = Vector2(573, 165)

[node name="Player" parent="." instance=ExtResource("1_plffl")]
position = Vector2(282, 178)
scale = Vector2(4, 4)

[node name="HeadLine2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-10, 140, 330, 140)
width = 4.0
default_color = Color(0.945672, 0.218837, 0.19699, 1)

[node name="BodyLine2D" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-10, 165, 330, 165)
width = 4.0
default_color = Color(0.945672, 0.218837, 0.19699, 1)
